--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -2,8 +2,9 @@ requests==2.26.0
 django==2.2.16
 psycopg2-binary==2.8.6
 python-dotenv
-djoser djangorestframework-simplejwt==4.7.1
+djangorestframework-simplejwt==4.7.1
 django-colorfield
 gunicorn==20.0.4
 drf_multiple_serializer==0.2.3
 django-filter==21.1
+djoser
