--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,16 +7,11 @@ services:
     env_file:
       - ./.env
 
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    volumes:
-      - ../frontend/:/app/result_build/
-  
-  backend:
-    image: p0lina/foodgram:v1
+  web:
+    image: p0lina/foodgram_web:v1  
     restart: always
+    ports:
+      - 8000:8000
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -24,21 +19,28 @@ services:
       - db
     env_file:
       - ./.env
+  
+  frontend:
+    image: p0lina/foodgram_front:v1
+    volumes:
+      - ../frontend/:/app/result_build/
+    links:
+      - web
 
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/backend-static/
+      - media_value:/var/html/backend-media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
     depends_on:
-      - backend
+      - web
 
 volumes:
-  foodgram_data:
-  static_value:
-  media_value:
+    foodgram_data:
+    static_value:
+    media_value:
