--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,4 +1,27 @@
 server {
+
+    listen 80;
+    server_name 158.160.33.167;
+
+    location /media/ {
+      root /var/html/;
+    }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://web:8000/api/;
+    }
+
+    location /static/ {
+      root /var/html/;
+    }
+
+    location /admin/ {
+      proxy_pass http://web:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
