--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend/
+          context: frontend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:v1
   
