--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,31 +1,40 @@
 server {
 
     listen 80;
-    server_name 158.160.33.167;
+    server_name 62.84.119.149;
 
-    location /media/ {
+    location /static/admin/ {
+      autoindex on;
       root /var/html/;
     }
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://web:8000/api/;
+
+    location /static/rest_framework/ {
+      autoindex on;
+      root /var/html/;
     }
 
-    location /static/ {
+    location /media/ {
+      autoindex on;
       root /var/html/;
     }
 
     location /admin/ {
       proxy_pass http://web:8000/admin/;
+      proxy_set_header        Host $host;
+    }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000;
     }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
