--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,8 +21,8 @@ services:
   frontend:
     image: p0lina/foodgram_front:v1
     volumes:
-      - ./frontend/:/app/result_build/
-    links:
+      - ../frontend/:/app/result_build/
+    depends_on:
       - web
 
   nginx:
@@ -31,12 +31,12 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../frontend/build:/usr/share/nginx/html
+      - ./docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - web
+      - frontend
 
 volumes:
     foodgram_data:
