--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 62.84.119.149;
+    server_name 127.0.0.1;  #62.84.119.149;
 
     location /static_backend/ {
       autoindex on;
